tests/Phase2/front/ex3.js
//DONE
read(a); 
a = input(); 
function foo(x) {
    local print = "hello"; //error
    print(x + y);
    local hello = a;
    local hello = 35;
    function hello() { //error
        print(::a + ::x); //error
    }
    function cos(){} //error
}
function foo(){} //error